rust/mimalloc-pprof/vendor/mimalloc-pprof-amalgamated.h


typedef void (mi_cdecl mi_deferred_free_fun)(bool force, unsigned long long heartbeat, void* arg);
typedef void (mi_cdecl mi_output_fun)(const char* msg, void* arg);
typedef void (mi_cdecl mi_error_fun)(int err, void* arg);
typedef struct mi_purge_holes_stats_s {
  size_t purged_bytes;        
  size_t purged_blocks;       
  size_t purged_bytes_total;  
  size_t discard_calls;       
  size_t reuse_calls;         
  size_t pages_freed;         
  size_t ineligible_pages;
  size_t ineligible_bytes;      
  size_t ineligible_free_bytes; 
  size_t unformed_bytes;        
  size_t unformed_bytes_total;  
  size_t unformed_discard_calls;
  size_t unformed_reuse_calls;  
  size_t pages_skipped;         
  size_t blocks_visited;        
  size_t full_sweeps;           
} mi_purge_holes_stats_t;
struct mi_heap_s;
typedef struct mi_heap_s mi_heap_t;
typedef struct mi_heap_area_s {
  void*  blocks;      
  size_t reserved;    
  size_t committed;   
  size_t used;        
  size_t block_size;  
  size_t full_block_size; 
  void*  reserved1;   
} mi_heap_area_t;
typedef bool (mi_cdecl mi_block_visit_fun)(const mi_heap_t* heap, const mi_heap_area_t* area, void* block, size_t block_size, void* arg);
typedef struct { void* _mi_subproc_id; } mi_subproc_id_t;  
mi_decl_export mi_subproc_id_t mi_subproc_main(void);
mi_decl_export mi_subproc_id_t mi_subproc_current(void);
typedef bool (mi_cdecl mi_heap_visit_fun)(mi_heap_t* heap, void* arg);
struct mi_theap_s;
typedef struct mi_theap_s mi_theap_t;
typedef bool (mi_cdecl mi_commit_fun_t)(bool commit, void* start, size_t size, bool* is_zero, void* user_arg);
#define MI_PROF_FORMAT_TEXT  0
#define MI_PROF_FORMAT_PROTO 1
#define MI_PROF_CONFIG_VERSION 1
typedef enum mi_prof_config_mode_e { MI_PROF_CONFIG_FALLBACK = 0, MI_PROF_CONFIG_OVERRIDE = 1 } mi_prof_config_mode_t;
typedef struct mi_prof_config_s {
  size_t size; int version;
  int mode;                     
  size_t sample_interval;       
  size_t max_profiler_bytes;
  uint64_t seed;                
  bool accum;
  size_t max_stack_depth;       
  const char* dump_at_exit;     
  int dump_format;              
} mi_prof_config_t;
typedef void (mi_prof_write_fun)(void* arg, const char* buf, size_t len);
#define MI_PROF_STAT_VERSION 3
typedef struct mi_prof_stats_s {
  size_t size; int version;
  bool   enabled; bool accum;
  size_t sample_rate;
  size_t live_samples;   size_t live_bytes;
  size_t accum_samples;  size_t accum_bytes;
  size_t unique_stacks;
  size_t arena_committed;
  size_t stack_table_overflows;
  size_t dropped_samples;
  size_t heap_committed;          
  size_t heap_reserved;           
  size_t heap_malloc_requested;
  size_t heap_pages;              
  size_t heap_pages_abandoned;    
  size_t heap_count;              
  size_t theap_count;
  size_t heap_purged;             
  bool heap_stats_detailed;
} mi_prof_stats_t;
typedef struct mi_prof_sample_info_s {
  const void* const* stack;
  size_t depth;
  size_t live_objects;  size_t live_bytes;
  size_t accum_objects; size_t accum_bytes;
} mi_prof_sample_info_t;
typedef bool (mi_prof_visit_fun)(const mi_prof_sample_info_t* info, void* arg);
typedef struct mi_prof_snapshot_s mi_prof_snapshot_t;
typedef struct mi_prof_module_info_s { const char* path; uintptr_t base; size_t size; } mi_prof_module_info_t;
typedef bool (mi_prof_module_visit_fun)(const mi_prof_module_info_t* info, void* arg);
typedef void (mi_memory_change_fun)(
  const mi_memory_change_t* change,
  void* arg
);
typedef bool (mi_memory_allocation_visit_fun)(
  void*  allocation,   
  size_t usable_size,  
  void*  arg           
);
#define MI_DHAT_STATS_VERSION 1
typedef struct mi_dhat_stats_s {
  size_t size; int version;
  bool enabled;
  bool incomplete;
  uint64_t total_bytes, total_blocks;
  uint64_t live_bytes, live_blocks;
  uint64_t peak_bytes, peak_blocks;
  uint64_t dropped, internal_bytes;
} mi_dhat_stats_t;