rust/mimalloc-pprof/src/sys.rs

//! Raw bindings to the in-tree mimalloc static amalgamation.

use core::ffi::c_char;
use core::ffi::c_int;
use core::ffi::c_void;

pub type MiProfWriteFun = unsafe extern "C" fn(*mut c_void, *const c_char, usize);

/// Mirrors `MI_PROF_STAT_VERSION` in `include/mimalloc/profile.h`.
pub const MI_PROF_STAT_VERSION: c_int = 3;

/// Mirrors `MI_DHAT_STATS_VERSION` in `include/mimalloc/dhat.h`.
pub const MI_DHAT_STATS_VERSION: c_int = 1;

/// Mirrors `mi_dhat_stats_t` (include/mimalloc/dhat.h) field-for-field.
#[repr(C)]
#[allow(non_camel_case_types)]
pub struct mi_dhat_stats_t {
    pub size: usize,
    pub version: c_int,
    pub enabled: bool,
    pub incomplete: bool,
    pub total_bytes: u64,
    pub total_blocks: u64,
    pub live_bytes: u64,
    pub live_blocks: u64,
    pub peak_bytes: u64,
    pub peak_blocks: u64,
    pub dropped: u64,
    pub internal_bytes: u64,
}

/// Mirrors `mi_prof_stats_t` (include/mimalloc/profile.h) field-for-field.
#[repr(C)]
#[allow(non_camel_case_types)]
pub struct mi_prof_stats_t {
    pub size: usize,
    pub version: c_int,
    pub enabled: bool,
    pub accum: bool,
    pub sample_rate: usize,
    pub live_samples: usize,
    pub live_bytes: usize,
    pub accum_samples: usize,
    pub accum_bytes: usize,
    pub unique_stacks: usize,
    pub arena_committed: usize,
    pub stack_table_overflows: usize,
    /// v2. Mirrors `mi_prof_stats_t.dropped_samples`: count of ALL dropped
    /// samples (record-alloc failure, stack-intern failure, including the
    /// `MI_PROF_STACK_CAP` cap); `stack_table_overflows` is a subset, so
    /// `dropped_samples >= stack_table_overflows` always.
    pub dropped_samples: usize,
    /// v3. Allocator-level ("ground truth") counters read from `mi_stats_get()`.
    /// Unlike every field above, these are exact rather than sampled.
    pub heap_committed: usize,
    pub heap_reserved: usize,
    pub heap_malloc_requested: usize,
    pub heap_pages: usize,
    pub heap_pages_abandoned: usize,
    pub heap_count: usize,
    /// Live thread-local heaps. The main thread's statically-initialized theap
    /// is not counted, so a single-threaded process reports 0.
    pub theap_count: usize,
    pub heap_purged: usize,
    /// True when the C library was built with `MI_STAT >= 2`. `heap_malloc_requested`
    /// is only maintained at that level; a default release build reports 0.
    pub heap_stats_detailed: bool,
}

/// Mirrors `MI_PROF_CONFIG_VERSION` in `include/mimalloc/profile.h`.
pub const MI_PROF_CONFIG_VERSION: c_int = 1;

/// Mirrors `MI_PROF_FORMAT_TEXT` / `MI_PROF_FORMAT_PROTO` (include/mimalloc/profile.h).
pub const MI_PROF_FORMAT_TEXT: c_int = 0;
pub const MI_PROF_FORMAT_PROTO: c_int = 1;

/// Mirrors `mi_prof_config_mode_t`'s `MI_PROF_CONFIG_FALLBACK` /
/// `MI_PROF_CONFIG_OVERRIDE` (include/mimalloc/profile.h).
pub const MI_PROF_CONFIG_FALLBACK: c_int = 0;
pub const MI_PROF_CONFIG_OVERRIDE: c_int = 1;

/// Mirrors `mi_prof_config_t` (include/mimalloc/profile.h) field-for-field.
#[repr(C)]
#[allow(non_camel_case_types)]
pub struct mi_prof_config_t {
    pub size: usize,
    pub version: c_int,
    pub mode: c_int, // mi_prof_config_mode_t
    pub sample_interval: usize,
    pub max_profiler_bytes: usize,
    pub seed: u64,
    pub accum: bool,
    pub max_stack_depth: usize,
    pub dump_at_exit: *const c_char,
    pub dump_format: c_int,
}

/// Mirrors `mi_prof_sample_info_t` (include/mimalloc/profile.h) field-for-field.
#[repr(C)]
#[allow(non_camel_case_types)]
pub struct mi_prof_sample_info_t {
    pub stack: *const *const c_void,
    pub depth: usize,
    pub live_objects: usize,
    pub live_bytes: usize,
    pub accum_objects: usize,
    pub accum_bytes: usize,
}

#[allow(non_camel_case_types)]
pub type mi_prof_visit_fun =
    unsafe extern "C" fn(info: *const mi_prof_sample_info_t, arg: *mut c_void) -> bool;

/// Opaque handle for `mi_prof_snapshot_t`; the profiler never hands out a
/// value, only a pointer, so this type is never constructed on the Rust side.
#[allow(non_camel_case_types)]
pub enum mi_prof_snapshot_t {}

/// Mirrors `mi_prof_module_info_t` (include/mimalloc/profile.h) field-for-field.
#[repr(C)]
#[allow(non_camel_case_types)]
pub struct mi_prof_module_info_t {
    pub path: *const c_char,
    pub base: usize,
    pub size: usize,
}

#[allow(non_camel_case_types)]
pub type mi_prof_module_visit_fun =
    unsafe extern "C" fn(info: *const mi_prof_module_info_t, arg: *mut c_void) -> bool;

/// Opaque handle for `mi_heap_t` (issue #269, Bun parity P4): only ever seen behind a
/// pointer here (mi_heap_get_seq), so this type is never constructed on the Rust side.
#[allow(non_camel_case_types)]
pub enum mi_heap_t {}

/// Mirrors `mi_purge_holes_stats_t` (issue #272, Bun parity P7b): what page hole purging
/// actually reclaimed, process wide. Field order and types must match `mimalloc.h` exactly.
#[repr(C)]
#[derive(Clone, Copy, Debug, Default, PartialEq, Eq)]
pub struct MiPurgeHolesStats {
    pub purged_bytes: usize,
    pub purged_blocks: usize,
    pub purged_bytes_total: usize,
    pub discard_calls: usize,
    pub reuse_calls: usize,
    pub pages_freed: usize,
    pub ineligible_pages: usize,
    pub ineligible_bytes: usize,
    pub ineligible_free_bytes: usize,
    pub unformed_bytes: usize,
    pub unformed_bytes_total: usize,
    pub unformed_discard_calls: usize,
    pub unformed_reuse_calls: usize,
    pub pages_skipped: usize,
    pub blocks_visited: usize,
    pub full_sweeps: usize,
}

// ---------------------------------------------------------------------------------------
// include/mimalloc-stats.h -- exact allocator statistics (upstream API)
// ---------------------------------------------------------------------------------------

/// Mirrors `MI_STAT_VERSION` in `include/mimalloc-stats.h`.
pub const MI_STAT_VERSION: usize = 5;

/// Mirrors `MI_BIN_HUGE` in `include/mimalloc-stats.h`; the bin arrays below hold
/// `MI_BIN_HUGE + 1` entries.
pub const MI_BIN_HUGE: usize = 73;

/// Mirrors `MI_CBIN_COUNT` (`mi_chunkbin_t`) in `include/mimalloc-stats.h`.
pub const MI_CBIN_COUNT: usize = 6;

/// Mirrors `mi_stat_count_t`: a quantity tracked over time.
#[repr(C)]
#[derive(Clone, Copy, Debug, Default, PartialEq, Eq)]
#[allow(non_camel_case_types)]
pub struct mi_stat_count_t {
    /// Total ever allocated.
    pub total: i64,
    /// Peak simultaneous value.
    pub peak: i64,
    /// Value right now.
    pub current: i64,
}

/// Mirrors `mi_stat_counter_t`: a monotonically increasing counter.
#[repr(C)]
#[derive(Clone, Copy, Debug, Default, PartialEq, Eq)]
#[allow(non_camel_case_types)]
pub struct mi_stat_counter_t {
    /// Total count.
    pub total: i64,
}

/// Mirrors `mi_stats_t` (include/mimalloc-stats.h) field-for-field, including the
/// reserved-for-future-use arrays and the three size-segregated bin arrays.
///
/// This is upstream's struct, unchanged by the fork -- in particular it carries **no**
/// hole-purging or idle-sweep gauges. Those live in [`MiPurgeHolesStats`], because the
/// sweep also covers pages no heap owns and `mi_stats_t` cannot grow (it is embedded in
/// a theap, at the meta-allocator's 8 KB block limit).
///
/// Field order, offsets and total size are checked against the C library at test time by
/// `tests/t19_layout.rs` (see `layout_probe.c`), which walks the header's own
/// `MI_STAT_FIELDS` list -- so an upstream reordering fails loudly instead of silently
/// reading the wrong counter.
#[repr(C)]
#[derive(Clone, Copy, Debug)]
#[allow(non_camel_case_types)]
pub struct mi_stats_t {
    /// `sizeof(mi_stats_t)` as the C library sees it.
    pub size: usize,
    /// [`MI_STAT_VERSION`] as the C library sees it.
    pub version: usize,
    /// Count of mimalloc pages.
    pub pages: mi_stat_count_t,
    /// Reserved memory bytes.
    pub reserved: mi_stat_count_t,
    /// Committed bytes.
    pub committed: mi_stat_count_t,
    /// Reset bytes.
    pub reset: mi_stat_counter_t,
    /// Purged bytes.
    pub purged: mi_stat_counter_t,
    /// Committed memory inside pages.
    pub page_committed: mi_stat_count_t,
    /// Abandoned page count.
    pub pages_abandoned: mi_stat_count_t,
    /// Number of threads.
    pub threads: mi_stat_count_t,
    /// Allocated bytes `<= MI_LARGE_OBJ_SIZE_MAX`.
    pub malloc_normal: mi_stat_count_t,
    /// Allocated bytes in huge pages.
    pub malloc_huge: mi_stat_count_t,
    /// Bytes the application actually asked for; only maintained at `MI_STAT >= 2`.
    pub malloc_requested: mi_stat_count_t,
    /// `mmap`/`VirtualAlloc` calls.
    pub mmap_calls: mi_stat_counter_t,
    /// Commit calls.
    pub commit_calls: mi_stat_counter_t,
    /// Reset calls.
    pub reset_calls: mi_stat_counter_t,
    /// Purge calls.
    pub purge_calls: mi_stat_counter_t,
    /// Number of memory arenas.
    pub arena_count: mi_stat_counter_t,
    /// Number of blocks `<= MI_LARGE_OBJ_SIZE_MAX`.
    pub malloc_normal_count: mi_stat_counter_t,
    /// Number of huge blocks.
    pub malloc_huge_count: mi_stat_counter_t,
    /// Number of allocations with guard pages.
    pub malloc_guarded_count: mi_stat_counter_t,
    /// Internal: arena rollbacks.
    pub arena_rollback_count: mi_stat_counter_t,
    /// Internal: arena purges.
    pub arena_purges: mi_stat_counter_t,
    /// Internal: page extensions.
    pub pages_extended: mi_stat_counter_t,
    /// Internal: retired pages.
    pub pages_retire: mi_stat_counter_t,
    /// Internal: total pages searched for a fresh page.
    pub page_searches: mi_stat_counter_t,
    /// Internal: searched count for a fresh page.
    pub page_searches_count: mi_stat_counter_t,
    /// v1/v2 only; always zero on this v3 line.
    pub segments: mi_stat_count_t,
    /// v1/v2 only; always zero on this v3 line.
    pub segments_abandoned: mi_stat_count_t,
    /// v1/v2 only; always zero on this v3 line.
    pub segments_cache: mi_stat_count_t,
    /// v1/v2 only; always zero on this v3 line.
    pub _segments_reserved: mi_stat_count_t,
    /// v3 only: first-class heaps.
    pub heaps: mi_stat_count_t,
    /// v3 only: thread-local heaps (`mi_theap_t`).
    pub theaps: mi_stat_count_t,
    /// v3 only: pages reclaimed on allocation.
    pub pages_reclaim_on_alloc: mi_stat_counter_t,
    /// v3 only: pages reclaimed on free.
    pub pages_reclaim_on_free: mi_stat_counter_t,
    /// v3 only: full pages re-abandoned.
    pub pages_reabandon_full: mi_stat_counter_t,
    /// v3 only: busy waits while unabandoning a page.
    pub pages_unabandon_busy_wait: mi_stat_counter_t,
    /// v3 only: waits while deleting a heap.
    pub heaps_delete_wait: mi_stat_counter_t,
    /// Upstream's future-extension padding; do not read.
    pub _stat_reserved: [mi_stat_count_t; 4],
    /// Upstream's future-extension padding; do not read.
    pub _stat_counter_reserved: [mi_stat_counter_t; 4],
    /// Allocation per size bin.
    pub malloc_bins: [mi_stat_count_t; MI_BIN_HUGE + 1],
    /// Pages allocated per size bin.
    pub page_bins: [mi_stat_count_t; MI_BIN_HUGE + 1],
    /// Chunks per page size (`mi_chunkbin_t`).
    pub chunk_bins: [mi_stat_count_t; MI_CBIN_COUNT],
}

/// Mirrors `mi_subproc_id_t` (include/mimalloc.h): an abstract, pointer-sized handle.
#[repr(C)]
#[derive(Clone, Copy, Debug, PartialEq, Eq)]
#[allow(non_camel_case_types)]
pub struct mi_subproc_id_t {
    /// The opaque identifier. Only ever produced by `mi_subproc_main`/`mi_subproc_current`.
    pub _mi_subproc_id: *mut c_void,
}

/// Mirrors `mi_output_fun` (include/mimalloc.h): mimalloc's text output sink.
#[allow(non_camel_case_types)]
pub type mi_output_fun = unsafe extern "C" fn(msg: *const c_char, arg: *mut c_void);

// ---------------------------------------------------------------------------------------
// include/mimalloc/memory-events.h -- allocation-change accounting (always compiled in)
// ---------------------------------------------------------------------------------------
